fixed input styling on IOS

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,3 +29,9 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
